Fix selector which is too wide, and other small fixes

--- a/docs/readthedocs/source/_static/css/nano_installation_guide.css
+++ b/docs/readthedocs/source/_static/css/nano_installation_guide.css
@@ -42,4 +42,5 @@
 
 #table-1 #cmd {
     text-align: left;
+    padding: 0.5rem 0.25rem
 }
